<resources>
    <string name="app_name">EnglishHelper</string>
    <string-array name="welcome_tips">
        <item>欢迎使用English Helper，快点击下方话筒来调戏我吧～</item>
        <item>欢迎使用English Helper，说说看“我想查询+中文”来向我提问吧！</item>
        <item>欢迎使用English Helper，可以跟我说“打电话给老师”向老师求助哦！</item>
        <item>欢迎使用English Helper，说说看“每日一词”来学习一个新单词吧！</item>
        <item>欢迎使用English Helper，可以试着对我读每日一词给出的单词来检查发音哦！</item>
        <item>欢迎使用English Helper，把想查的单词拼给我听，试试“搜索O-R-A-N-G-E”！</item>
        <item>欢迎使用English Helper，今天你英语进步了吗？</item>
    </string-array>
    <string name="dialog_title">帮助和设置</string>
    <string name="setting_confirm_button">保存</string>
    <string name="setting_text_field">电话</string>
    <string name="background_description">background image</string>
    <string name="help_button_description">help and settings</string>
    <string name="speak_button_description">tap and speak</string>
    <string name="popup_message_positive">号码已保存</string>
    <string name="popup_message_negative">号码未更改</string>
    <string name="setting_title">请在下方填写老师的电话号码哦：</string>
    <string name="help_1">可以试着对我说：</string>
    <string name="help_2">“我想知道苹果的英文是什么”</string>
    <string name="help_3">“请帮我打电话给老师求助”</string>
    <string name="help_4">“每日一词”</string>
    <string name="help_5">“搜一下O-R-A-N-G-E”</string>
    <string name="help_6">···还可以试着对我读每日一词\n给出的单词哦</string>
    <string name="popup_message_copy">单词已复制到剪贴板</string>
    <string-array name="keywords_post">
        <item>的英语</item>
        <item>的英文</item>
        <item>的外文</item>
        <item>的外语</item>
        <item>的翻译</item>
        <item>的意思</item>
        <item>用英语</item>
        <item>用英文</item>
        <item>用外语</item>
        <item>用外文</item>
        <item>的中文</item>
        <item>的汉语</item>
        <item>用中文</item>
        <item>用汉语</item>
        <item>怎么翻译</item>
        <item>如何翻译</item>
        <item>翻译</item>
        <item>怎么表达</item>
        <item>如何表达</item>
        <item>怎么说</item>
        <item>怎么讲</item>
        <item>的讲法</item>
        <item>的说法</item>
        <item>是什么</item>
        <item>是啥</item>
    </string-array>
    <string-array name="keywords_pre">
        <item>把</item>
        <item>告诉我</item>
        <item>什么叫做</item>
        <item>什么叫作</item>
        <item>什么叫</item>
        <item>查询一下</item>
        <item>搜索一下</item>
        <item>查找一下</item>
        <item>搜寻一下</item>
        <item>了解一下</item>
        <item>理解一下</item>
        <item>说一下</item>
        <item>讲一下</item>
        <item>说说看</item>
        <item>讲讲看</item>
        <item>说说</item>
        <item>讲讲</item>
        
        
        <item>查询</item>
        <item>知道</item>
        <item>搜索</item>
        <item>查找</item>
        <item>搜寻</item>
        <item>了解</item>
        <item>理解</item>
        <item>明白</item>
        <item>清楚</item>
        <item>搜搜</item>
        <item>找找</item>
        <item>查查</item>
        <item>翻译翻译</item>
        <item>翻译一下</item>
        <item>翻译</item>
        <item>找一下</item>
        <item>查一下</item>
        <item>搜一下</item>
        <item>找一找</item>
        <item>查一查</item>
        <item>搜一搜</item>
        <item>找</item>
        <item>查</item>
        <item>搜</item>
    </string-array>
    <string-array name="keywords_call">
        <item>电话</item>
        <item>打给</item>
        <item>老师</item>
        <item>教师</item>
        <item>教授</item>
        <item>导师</item>
        <item>老板</item>
        <item>讲师</item>
        <item>呼叫</item>
        <item>拨打</item>
        <item>拨叫</item>
    </string-array>
</resources>